[package]
name = "tremble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "2"
chrono = "0.4"
ansi_term = "0.12"
log = { version = "0.4", features = ["std"] } # TODO: Provide built in logging impl as optional build feature

# TODO: Enable for "CSharp" feature only
[build-dependencies]
csbindgen = "1"